clusters/managed/security/hashivault/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app hashivault
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://vault.trusted.nirmalhk7.com"
    gethomepage.dev/description: "Hashicorp Vault"
    gethomepage.dev/group: Security
    gethomepage.dev/icon: hashicorp-vault
    gethomepage.dev/app: HashiVault # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: HashiVault
    gethomepage.dev/weight: "20"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=hashivault"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`vault.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 8200
